--- a/app/src/main/res/layout/activity_custom_security_question_spinner.xml
+++ b/app/src/main/res/layout/activity_custom_security_question_spinner.xml
@@ -15,6 +15,7 @@
         android:layout_margin="5dp"
         android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
